crates/thread_aware_macros_impl/tests/snapshots/derive__enum_variant_nested_phantom_gets_thread_aware_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T, U: ::thread_aware::ThreadAware> ::thread_aware::ThreadAware
for NestedPhantomEnum<T, U>
where
    core::marker::PhantomData<T>: ::thread_aware::ThreadAware,
    core::marker::PhantomData<U>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        match self {
            Self::Wrapped(_v0) => {
                ::thread_aware::ThreadAware::relocate(_v0, source, destination);
            }
            Self::Also(_v0) => {
                ::thread_aware::ThreadAware::relocate(_v0, source, destination);
            }
            Self::Plain(_v0) => {
                ::thread_aware::ThreadAware::relocate(_v0, source, destination);
            }
        }
    }
}
