crates/thread_aware_macros_impl/tests/snapshots/derive__error_unknown_attr.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
::core::compile_error! {
    "unknown thread_aware attribute (only 'skip' is supported)"
}
