crates/thread_aware_macros_impl/tests/snapshots/derive__generated_predicate_appends_to_existing_where_clause.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ::thread_aware::ThreadAware, U> ::thread_aware::ThreadAware for WithWhere<T, U>
where
    T: Clone,
    core::marker::PhantomData<U>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<
            ::thread_aware::affinity::Affinity,
        >,
        __thread_aware_destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.value,
            __thread_aware_source,
            __thread_aware_destination,
        );
        ::thread_aware::ThreadAware::relocate(
            &mut self.marker,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
