crates/thread_aware_macros_impl/tests/snapshots/derive__generics_add_bounds.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T, U> ::thread_aware::ThreadAware for Gen<T, U>
where
    T: ::thread_aware::ThreadAware,
    core::marker::PhantomData<U>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.0,
            __thread_aware_source,
            __thread_aware_destination,
        );
        ::thread_aware::ThreadAware::relocate(
            &mut self.1,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
