crates/thread_aware_macros_impl/tests/snapshots/derive__generics_paren_adds_bound.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T> ::thread_aware::ThreadAware for ParenthesizedType<T>
where
    T: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.field,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
